--- a/DAL/FiveOursDAL/FiveOursDAL/settings.json
+++ b/DAL/FiveOursDAL/FiveOursDAL/settings.json
@@ -1,2 +1,1 @@
-﻿{ "ConnectionString": "Data Source=LAPTOP-8ULCI8P5\\\\MSSQLSERVER02;Initial Catalog=FiveOurs1;Integrated Security=True" }
-
+﻿{ "ConnectionString": "Data Source=LAPTOP-8ULCI8P5\\MSSQLSERVER02;Initial Catalog=FiveOurs1;Integrated Security=True" }
