--- a/Presentation/FiveOursInterface/FiveOursInterface/FiveOursInterface.csproj
+++ b/Presentation/FiveOursInterface/FiveOursInterface/FiveOursInterface.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Collections" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BLL\ResultsDbContext\ResultsDbContext\ResultsDbContext.csproj" />
+  </ItemGroup>
+
 </Project>
