--- a/Presentation/FiveOursInterface/FiveOursInterface/FiveOursInterface.csproj
+++ b/Presentation/FiveOursInterface/FiveOursInterface/FiveOursInterface.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Framework" Version="16.8.0" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
   </ItemGroup>
 
